--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "dependencies": {
-    "isomorphic-fetch": "^3.0.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  },
+  "name": "nodejs-typescript",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.ts",
   "scripts": {
     "test": "jest"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "isomorphic-fetch": "^3.0.0",
+    "node-fetch": "^3.3.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
@@ -13,7 +20,9 @@
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.4.1",
     "babel-jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "tsx": "^3.12.7"
   }
 }
